--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
       
       </li>
       <li> <a href="/refPages/unit1/lesson0004">Lesson 4: Order</a>
-
+        <ol>
+          <li>Notation: </li>
+        </ol>
       </li>
       <li></li>
       <li></li>
