--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       <li> <a href="/refPages/unit1/lesson0004">Lesson 4: Order</a>
         <ol>
           <li>Notation: </li>
+          <li>Defs: </li>
         </ol>
       </li>
       <li></li>
