--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
         <ol>
           <li>Notation: $xy$, $e$, $x^{-1}$, $x/y$, $x^n$</li>
           <li>Defs: identity element, inverse element, group, commutative</li>
-          <li>Thm: <a href="/refPages/unit1/lesson0002#assocOpUniqIdNInv">Assoc. op. uniq. id. & inv.</a></li>
-          <li>Thm: <a href="/refPages/unit1/lesson0002#groupUniqIdNInv">Group. op. uniq. id. & inv.</a></li>
-          <li>Thm: <a href="/refPages/unit1/lesson0002#groupInvInv">Group inv. inv.</a></li>
-          <li>Thm: <a href="/refPages/unit1/lesson0002#groupUniqSol">Group uniq. sol.</a></li>
-          <li>Thm: <a href="/refPages/unit1/lesson0002#groupProdInv">Group prod. inv.</a></li>
-          <li>Thm: <a href="/refPages/unit1/lesson0002#groupExpLaws">Group exp. laws</a></li>
+          <li>Thm: <a href="refPages/unit1/0002groups.html#assocOpUniqIdNInv">Assoc. op. uniq. id. & inv.</a></li>
+          <li>Thm: <a href="refPages/unit1/0002groups.html#groupUniqIdNInv">Group. op. uniq. id. & inv.</a></li>
+          <li>Thm: <a href="refPages/unit1/0002groups.html#groupInvInv">Group inv. inv.</a></li>
+          <li>Thm: <a href="refPages/unit1/0002groups.html#groupUniqSol">Group uniq. sol.</a></li>
+          <li>Thm: <a href="refPages/unit1/0002groups.html#groupProdInv">Group prod. inv.</a></li>
+          <li>Thm: <a href="refPages/unit1/0002groups.html#groupExpLaws">Group exp. laws</a></li>
         </ol>
       </li>
       <li> <a href="/refPages/unit1/lesson0003">Lesson 3: Rings and Fields</a>
