--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <ol>
           <li>Notation: </li>
           <li>Defs: </li>
+          <li>Thm: </li>
         </ol>
       </li>
       <li></li>
