--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         <ol>
           <li>Notation: 0, 1, $na$, $a^n$</li>
           <li>Defs: Distributes, ring, field</li>
-          <li>Thm: <a href="/refPages/unit1/lesson0003#ringUniqIdNInv">Ring uniq. id. & Inv.</a></li>
-          <li>Thm: <a href="/refPages/unit1/lesson0003#ringZeroAnnihilates">Ring zero annihilates</a></li>
-          <li>Thm: <a href="/refPages/unit1/lesson0003#ringNegOneNegates">Ring -1 negates</a></li>
-          <li>Thm: <a href="/refPages/unit1/lesson0003#fieldEqsUniqSols">Field eqs. uniq. sols.</a></li>
+          <li>Thm: <a href="refPages/unit1/0003ringfield.html#ringUniqIdNInv">Ring uniq. id. & Inv.</a></li>
+          <li>Thm: <a href="refPages/unit1/0003ringfield.html#ringZeroAnnihilates">Ring zero annihilates</a></li>
+          <li>Thm: <a href="refPages/unit1/0003ringfield.html#ringNegOneNegates">Ring -1 negates</a></li>
+          <li>Thm: <a href="refPages/unit1/0003ringfield.html#fieldEqsUniqSols">Field eqs. uniq. sols.</a></li>
         </ol>
       
       </li>
