--- a/refPages/unit1/0005bounds.html
+++ b/refPages/unit1/0005bounds.html
@@ -42,6 +42,131 @@
     ></script>
   </head>
   <body>
+    <h1>0005 Bounds</h1>
+
+    <div class="def">
+      Let $(X,\preceq)$ be a poset and $A\subseteq X$ a nonempty set, and $\alpha\in X$.  <br>
+
+      If $\forall b\in A$ we have $b\preceq \alpha$ then we call $\alpha$ an <b>upper bound of $A$</b>.  <br>
+
+      We denote the set of all upper bounds of $A$ by $UB_A$. <br>
+      
+      If $\alpha\in A\cap UB_A$ then we call $\alpha$ the <b>maximum of $A$</b> and write $\alpha=\max(A)$. <br>
+
+      If $\alpha=\min(UB_A)$ we call $\alpha$ the <b>supremum of $A$</b> and write $\alpha=\sup(A)$.  <br>
+
+      Each of these terms define a kind of upper bound for a set.  Each has a dual in terms of lower bounds.  The dual of the maximum is called the <b>minimum</b>, written $\min(A)$.  The dual of the supremum is the <b>infimum</b>, written $\inf(A)$.
+    </div>
+
+    Throughout this section, assume that $(X,\preceq)$ is a poset, and $A,B\subseteq X$ are nonempty subsets, and $\alpha\in X$.  <br>
+
+    For each theorem below, stated in terms of an upper bound, there is a theorem for its dual in terms of a lower bound.
+
+    <div class="thm" id="boundUniqMax">
+      Theorem: <tt>Bound uniq. max.</tt> <br>
+
+      If the maximum of a set exists, it is unique.
+    </div>
+    <details>
+      <summary>Statement and proof.</summary>
+
+      Suppose $\alpha=\max(A)$ exists.  Let $\beta\in X$  be another maximum, $\beta \in A\cap UB_A$.  <br>
+
+      Then $\alpha\preceq \beta$ because $\alpha\in A$ and $\beta\in UB_A$.  But also $\beta\preceq \alpha$ because $\beta\in A$ and $\alpha\in UB_A$.  <br>
+
+      Therefore by the anti-symmetry of $\preceq$, we have $\alpha=\beta$. <br>
+
+      $\Box$
+    </details>
+
+    <div class="thm" id="boundMaxIsSup">
+      Theorem: <tt>Bound max. is sup.</tt> <br>
+
+      If a set has a maximum then the maximum is the supremum of that set.
+    </div>
+    <details>
+      <summary>Statement and proof.</summary>
+
+      <i>Statement</i>:  Let $A\subseteq X$ be a set with a maximum, $\alpha = \max(A)$.  Then $\alpha=\sup(A)$. <br><br>
+
+      <i>Proof</i>: 
+    </details>
+
+    <div class="thm" id="boundTotOrdFiniteSetMax">
+      Theorem: <tt>Bound tot. ord. finite set max.</tt> <br>
+
+      For a total order, every finite set has a maximum.
+    </div>
+
+    <details>
+      <summary>Statement and proof.</summary>
+
+      <i>Statement</i>: If $\preceq$ is total and $A$ is finite, then $\max(A)$ exists. <br></br>
+
+      <i>Proof</i>: 
+
+      <details>
+        <summary>Base-case: $|C|=1$.</summary>
+
+        Suppose that $C\subseteq X$ is a singleton set, and let $C=\{y\}$.  Then $y\in UB_C$ by reflexivity, $y\preceq y$.  <br>
+        Therefore $y \in C\cap UB_C$ and so $y = \max(C)$.
+      </details>
+
+      <details>
+        <summary>Inductive case.</summary>
+
+        Let $1\le n$ and suppose that every finite set $D\subseteq X$, such that $|D|=n$, the set $D$ has a maximum. Suppose that $C\subseteq X$ is such that $|C| = n+1$. <br>
+
+        Then let $y\in C$ and define $C' = C\smallsetminus \{y\}$.  By the inductive hypothesis, since $|C'|=n$, then $\alpha = \max(C')$ exists. <br>
+
+        If $y\preceq \alpha$ then $\alpha=\max(C)$.  If $\alpha\preceq y$ then $y=\max(C)$.  Therefore, in all cases, $\max(C)$ exist.
+      </details>
+
+      $\Box$
+    </details>
+
+    <div class="thm" id="boundInfLefteqSup">
+      Theorem: <tt>Bound inf. left-eq sup.</tt> <br>
+
+      $\inf(A)\preceq \sup(A)$
+    </div>
+
+    <details>
+      <summary>Statement and proof.</summary>
+
+      <i>Statement</i>: Suppose that both $\alpha=\inf(A)$ and $\beta=\sup(A)$ exist.  Then 
+      $$ \inf(A)\preceq \sup(A) $$
+      <i>Proof</i>: Let $y\in A$.  Then if $\gamma\in LB_A$ and $\delta\in UB_A$, we must have 
+      $$ \gamma\preceq y \preceq \delta $$
+
+      Since $\alpha\in LB_A$ and $\beta\in UB_A$ then we have 
+
+      $$ \alpha\preceq y\preceq \beta $$
+
+      $\Box$
+    </details>
+
+    <div class="thm" id="boundSubsetSupIneq">
+      Theorem: <tt>Bound subset sup. ineq.</tt> <br>
+
+      Subsets have left-eq suprema.
+    </div>
+
+    <details>
+      <summary>Statement and proof.</summary>
+
+      <i>Statement</i>: Let $A\subseteq B$ and suppose that $\sup(A)$ and $\sup(B)$ both exist.  <br>
+      Then $\sup(A)\preceq \sup(B)$.  <br></br>
+
+      <i>Proof</i>: If $y\in A$ then $y\in B$.  Therefore $y\preceq\sup(B)$. <br>
+
+      So $\sup(B) \in UB_A$.  Since $\sup(A)=\min(UB_A)$ we have 
+
+      $$\sup(A)\preceq\sup(B)$$
+
+      $\Box$
+    </details>
+
 
   </body>
 </html>
