--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
     The pedagogical portion of the course is hosted at this GitHub repository:  <a href="https://www.github.com/axiomtutor/acira">A Course in Real Analysis ... in Marimo!</a> <br>
 
-    <h1 id="toc">Table of Contents  </h1>
-    Unit 1: Real Number Axioms
+    <h2 id="toc">Unit 1: Real Number Axioms  </h2>
+    
     <ul>
       <li> <a href="refPages/unit1/0002groups.html">Lesson 0002: Groups</a>
         <ol>
@@ -65,7 +65,7 @@
           <li>Thm: <a href="refPages/unit1/0002groups.html#groupExpLaws">Group exp. laws</a></li>
         </ol>
       </li>
-      <li> <a href="/refPages/unit1/lesson0003">Lesson 3: Rings and Fields</a>
+      <li> <a href="refPages/unit1/0003ringfield.html">Lesson 3: Rings and Fields</a>
 
         <ol>
           <li>Notation: 0, 1, $na$, $a^n$</li>
@@ -77,17 +77,18 @@
         </ol>
       
       </li>
-      <li> <a href="/refPages/unit1/lesson0004">Lesson 4: Order</a>
+      <li> <a href="refPages/unit1/0004order.html">Lesson 4: Order</a>
         <ol>
-          <li>Notation: </li>
-          <li>Defs: </li>
-          <li>Thm: </li>
+          <li>Notation: $\preceq,\prec,\succeq,\succ$</li>
+          <li>Defs: Partial order, partially ordered set, poset, commensurability, totality, total order, totally ordered set</li>
+          <li>Thm: <a href="refPages/unit1/0004order.html#posetPrecStrictPartOrd">Poset prec. strict part. ord.</a></li>
+          <li>Thm: <a href="refPages/unit1/0004order.html#posetNegPrec">Poset neg. prec.</a></li>
         </ol>
       </li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><a href="refPages/unit1/0004order.html">Lesson 5: Bounds</a></li>
+      <li><a href="refPages/unit1/0004order.html">Lesson 6: Function Bounds</a></li>
+      <li><a href="refPages/unit1/0004order.html">Lesson 7: Ordered Fields</a></li>
+      <li><a href="refPages/unit1/0004order.html">Lesson 8: Completeness</a></li>
     </ul>
 
   </body>
