--- a/index.html
+++ b/index.html
@@ -85,10 +85,20 @@
           <li>Thm: <a href="refPages/unit1/0004order.html#posetNegPrec">Poset neg. prec.</a></li>
         </ol>
       </li>
-      <li><a href="refPages/unit1/0004order.html">Lesson 5: Bounds</a></li>
-      <li><a href="refPages/unit1/0004order.html">Lesson 6: Function Bounds</a></li>
-      <li><a href="refPages/unit1/0004order.html">Lesson 7: Ordered Fields</a></li>
-      <li><a href="refPages/unit1/0004order.html">Lesson 8: Completeness</a></li>
+      <li><a href="refPages/unit1/0005bounds.html">Lesson 5: Bounds</a>
+      <ol>
+        <li>Notation: $UB_A, \max(A), \sup(A)$</li>
+        <li>Defs: Upper bound, maximum, supremum, and duals (lower bound, minimum, infimum)</li>
+        <li>Thm: <a href="refPages/unit1/0005bounds.html#boundMaxIsSup"></a>Bound max. is sup.</li>
+        <li>Thm: <a href="refPages/unit1/0005bounds.html#boundTotOrdFiniteSetMax">Bound tot. ord. finite set max.</a></li>
+        <li>Thm: <a href="refPages/unit1/0005bounds.html#boundInfLefteqSup">Bound inf. lefteq sup.</a> </li>
+        <li>Thm: <a href="refPages/unit1/0005bounds.html#boundSubsetSupIneq">Bound subset sup. ineq.</a> </li>
+
+      </ol>
+      </li>
+      <li><a href="refPages/unit1/0006funbound.html">Lesson 6: Function Bounds</a></li>
+      <li><a href="refPages/unit1/0007ordfield.html">Lesson 7: Ordered Fields</a></li>
+      <li><a href="refPages/unit1/0008completeness.html">Lesson 8: Completeness</a></li>
     </ul>
 
   </body>
