--- a/index.html
+++ b/index.html
@@ -89,16 +89,42 @@
       <ol>
         <li>Notation: $UB_A, \max(A), \sup(A)$</li>
         <li>Defs: Upper bound, maximum, supremum, and duals (lower bound, minimum, infimum)</li>
-        <li>Thm: <a href="refPages/unit1/0005bounds.html#boundMaxIsSup"></a>Bound max. is sup.</li>
+        <li>Thm: <a href="refPages/unit1/0005bounds.html#boundMaxIsSup">Bound max. is sup.</a></li>
         <li>Thm: <a href="refPages/unit1/0005bounds.html#boundTotOrdFiniteSetMax">Bound tot. ord. finite set max.</a></li>
         <li>Thm: <a href="refPages/unit1/0005bounds.html#boundInfLefteqSup">Bound inf. lefteq sup.</a> </li>
         <li>Thm: <a href="refPages/unit1/0005bounds.html#boundSubsetSupIneq">Bound subset sup. ineq.</a> </li>
 
       </ol>
       </li>
-      <li><a href="refPages/unit1/0006funbound.html">Lesson 6: Function Bounds</a></li>
-      <li><a href="refPages/unit1/0007ordfield.html">Lesson 7: Ordered Fields</a></li>
-      <li><a href="refPages/unit1/0008completeness.html">Lesson 8: Completeness</a></li>
+      <li><a href="refPages/unit1/0006funbound.html">Lesson 6: Function Bounds</a>
+      <ol>
+        <li>
+          Notation: $\max(f),\sup(f),f\preceq g, f_{(\cdot, c)}, f_{(c,\cdot)}, \sup_{x\in X}f_{(x,\cdot)}, \sup_{y\in Y}f_{(\cdot,y)}, \sup_{x}\sup_y f$
+        </li>
+        <li>Defs: Function bound, function maximum, function supremum, partially applied function</li>
+        <li>Thm: </li>
+        <li>Thm: </li>
+        <li>Thm: </li>
+      </ol>
+      </li>
+      <li><a href="refPages/unit1/0007ordfield.html">Lesson 7: Ordered Fields</a>
+      <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      </li>
+      <li><a href="refPages/unit1/0008completeness.html">Lesson 8: Completeness</a>
+      <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      </li>
     </ul>
 
   </body>
