--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     The pedagogical portion of the course is hosted at this GitHub repository:  <a href="https://www.github.com/axiomtutor/acira">A Course in Real Analysis ... in Marimo!</a> <br>
 
     <h2 id="toc">Unit 1: Real Number Axioms  </h2>
-    
+    <details><summary>Lessons</summary>
     <ul>
       <li> <a href="refPages/unit1/0002groups.html">Lesson 0002: Groups</a>
         <ol>
@@ -99,9 +99,9 @@
       <li><a href="refPages/unit1/0006funbound.html">Lesson 6: Function Bounds</a>
       <ol>
         <li>
-          Notation: $\max(f),\sup(f),f\preceq g, f_{(\cdot, c)}, f_{(c,\cdot)}, \sup_{x\in X}f_{(x,\cdot)}, \sup_{y\in Y}f_{(\cdot,y)}, \sup_{x}\sup_y f$
+          Notation: $\text{Im}(f), \max(f),\sup(f),f\preceq g, f_{(\cdot, c)}, f_{(c,\cdot)}, \sup_{x\in X}f_{(x,\cdot)}, \sup_{y\in Y}f_{(\cdot,y)}, \sup_{x}\sup_y f$
         </li>
-        <li>Defs: Function bound, function maximum, function supremum, partially applied function</li>
+        <li>Defs: Image, function bound, function maximum, function supremum, partially applied function</li>
         <li>Thm: </li>
         <li>Thm: </li>
         <li>Thm: </li>
@@ -126,6 +126,7 @@
       </ol>
       </li>
     </ul>
+    </details>
 
   </body>
 </html>
