--- a/refPages/unit1/0006funbound.html
+++ b/refPages/unit1/0006funbound.html
@@ -44,7 +44,11 @@
   <body>
     <h1>0006 Function Bounds</h1>
 
-    
+    <div class="def">
+      Let $X, Y$ be two nonempty sets and $f:X\to Y$.  <br>
+      We define the <b>image of $f$</b> as the set 
+      $$ \text{Im}(f) = \{f(a):a\in X\} $$
+    </div>
 
   </body>
 </html>
