--- a/refPages/unit1/0006funbound.html
+++ b/refPages/unit1/0006funbound.html
@@ -101,5 +101,21 @@
       $\Box$
     </details>
 
+    <div class="thm">
+      Theorem: <tt>Fun. Bound Double Sup</tt> <br>
+
+      Double sups are independent of order.
+    </div>
+
+    <details>
+      <summary>Statement and proof:</summary>
+
+      <i>Statement</i>: 
+
+      $$ \sup h = \sup_{c\in A}\sup_{d\in B} h = \sup_{d\in B}\sup_{c\in A} h $$
+
+      <i>Proof</i>: Let $c,d\in A\times B$.  Then $h(c,d) \preceq \left(\sup_{d\in B}h\right)(c) \preceq \sup_{d\in B}\sup_{c\in A} h$.  
+    </details>
+
   </body>
 </html>
