--- a/refPages/unit1/0006funbound.html
+++ b/refPages/unit1/0006funbound.html
@@ -114,7 +114,12 @@
 
       $$ \sup h = \sup_{c\in A}\sup_{d\in B} h = \sup_{d\in B}\sup_{c\in A} h $$
 
-      <i>Proof</i>: Let $c,d\in A\times B$.  Then $h(c,d) \preceq \left(\sup_{d\in B}h\right)(c) \preceq \sup_{d\in B}\sup_{c\in A} h$.  
+      <i>Proof</i>: Let $c,d\in A\times B$.  <br>
+      
+      Then $h(c,d) \preceq \left(\sup_{d\in B}h\right)(c) \preceq \sup_{d\in B}\sup_{c\in A} h$.  <br>
+
+      This shows that $\sup_{d\in B}\sup_{c\in A}h \in UB_{\text{Im}(h)}$ and so 
+      $$ \sup h \preceq\sup_{d\in B}\sup_{c\in A} h $$
     </details>
 
   </body>
