--- a/refPages/unit1/0006funbound.html
+++ b/refPages/unit1/0006funbound.html
@@ -118,8 +118,17 @@
       
       Then $h(c,d) \preceq \left(\sup_{d\in B}h\right)(c) \preceq \sup_{d\in B}\sup_{c\in A} h$.  <br>
 
-      This shows that $\sup_{d\in B}\sup_{c\in A}h \in UB_{\text{Im}(h)}$ and so 
-      $$ \sup h \preceq\sup_{d\in B}\sup_{c\in A} h $$
+      This shows that $\sup_{d\in B}\sup_{c\in A}h \in UB_{\text{Im}(h)}$. <br>
+
+      Now let $\alpha\in UB_{\text{Im}h}$.  
+
+      <details>
+        <summary>$\sup h_{(c,\cdot)} \preceq \alpha$</summary>
+
+        Let $d\in B$.  Then for any $c\in A$ we have $h(c,d)\preceq \alpha$ and therefore $\alpha$ is an upper bound on $h_{(\cdot,d)}$.  Therefore $\sup h_{(c,\cdot)} \preceq \alpha$.
+      </details>
+
+
     </details>
 
   </body>
