--- a/refPages/unit1/0006funbound.html
+++ b/refPages/unit1/0006funbound.html
@@ -125,7 +125,11 @@
       <details>
         <summary>$\sup h_{(c,\cdot)} \preceq \alpha$</summary>
 
-        Let $d\in B$.  Then for any $c\in A$ we have $h(c,d)\preceq \alpha$ and therefore $\alpha$ is an upper bound on $h_{(\cdot,d)}$.  Therefore $\sup h_{(c,\cdot)} \preceq \alpha$.
+        Let $d\in B$.  <br>
+        
+        Then for any $c\in A$ we have $h(c,d)\preceq \alpha$ and therefore $\alpha$ is an upper bound on $h_{(\cdot,d)}$.  <br>
+        
+        Therefore $\sup h_{(c,\cdot)} \preceq \alpha$.
       </details>
 
 
