--- a/refPages/unit1/0006funbound.html
+++ b/refPages/unit1/0006funbound.html
@@ -120,19 +120,16 @@
 
       This shows that $\sup_{d\in B}\sup_{c\in A}h \in UB_{\text{Im}(h)}$. <br>
 
-      Now let $\alpha\in UB_{\text{Im}h}$.  
+      Now let $\alpha\in UB_{\text{Im}h}$.  <br>
 
-      <details>
-        <summary>$\sup h_{(c,\cdot)} \preceq \alpha$</summary>
+      For every $c\in A,d\in B$ we have $h(c,d)\preceq \alpha$ and therefore 
+      $\alpha$ is an upper bound on $h_{(\cdot,d)}$.  Hence $\sup_{c\in A} h_{(c,\cdot)}\preceq \alpha$.  <br>
 
-        Let $d\in B$.  <br>
-        
-        Then for any $c\in A$ we have $h(c,d)\preceq \alpha$ and therefore $\alpha$ is an upper bound on $h_{(\cdot,d)}$.  <br>
-        
-        Therefore $\sup h_{(c,\cdot)} \preceq \alpha$.
-      </details>
+      Then $\alpha$ is an upper bound on $\sup_{c\in A} h_{(c,\cdot)}$.  Therefore $\sup_{d\in B}\sup_{c\in A}h \preceq \alpha$.
 
+      The above shows $\sup_{d\in B}\sup_{c\in A} h = \sup h$.
 
+      $\Box$
     </details>
 
   </body>
