--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
           Notation: $\text{Im}(f), \max(f),\sup(f),f\preceq g, f_{(\cdot, c)}, f_{(c,\cdot)}, \sup_{x\in X}f_{(x,\cdot)}, \sup_{y\in Y}f_{(\cdot,y)}, \sup_{x}\sup_y f$
         </li>
         <li>Defs: Image, function bound, function maximum, function supremum, partially applied function</li>
-        <li>Thm: </li>
-        <li>Thm: </li>
+        <li>Thm: <a href="refPages/unit1/0006funbound.html#funBoundIneqSupIneq">Fun. Bound Ineq. Sup. Ineq.</a><br>
+        </li>
+        <li>Thm: <a href="refPages/unit1/0006funbound.html#funBoundDoubleSup">Fun. Bound Double Sup.</a></li>
         <li>Thm: </li>
       </ol>
       </li>
