--- a/refPages/unit1/0006funbound.html
+++ b/refPages/unit1/0006funbound.html
@@ -101,7 +101,7 @@
       $\Box$
     </details>
 
-    <div class="thm">
+    <div class="thm" id="funBoundDoubleSup">
       Theorem: <tt>Fun. Bound Double Sup</tt> <br>
 
       Double sups are independent of order.
@@ -120,7 +120,7 @@
 
       This shows that $\sup_{d\in B}\sup_{c\in A}h \in UB_{\text{Im}(h)}$. <br>
 
-      Now let $\alpha\in UB_{\text{Im}h}$.  <br>
+      Now let $\alpha\in UB_{\text{Im}(h)}$.  <br>
 
       For every $c\in A,d\in B$ we have $h(c,d)\preceq \alpha$ and therefore 
       $\alpha$ is an upper bound on $h_{(\cdot,d)}$.  Hence $\sup_{c\in A} h_{(c,\cdot)}\preceq \alpha$.  <br>
