--- a/index.html
+++ b/index.html
@@ -105,16 +105,15 @@
         <li>Thm: <a href="refPages/unit1/0006funbound.html#funBoundIneqSupIneq">Fun. Bound Ineq. Sup. Ineq.</a><br>
         </li>
         <li>Thm: <a href="refPages/unit1/0006funbound.html#funBoundDoubleSup">Fun. Bound Double Sup.</a></li>
-        <li>Thm: </li>
       </ol>
       </li>
       <li><a href="refPages/unit1/0007ordfield.html">Lesson 7: Ordered Fields</a>
       <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Notation: $(a,b), (a,b], [a,b), [a,b],\infty, F^\ast, a+X, aX X+Y, XY, X^+, X^-, X^{\preceq 0}, X^{\succeq 0}$</li>
+        <li>Def: Interval, bounded, closed, open, positive, negative, compatible with addition, compatible with multiplication</li>
+        <li>Thm: <tt></tt></li>
+        <li>Thm: <tt></tt> </li>
+        <li>Thm: <tt></tt></li>
       </ol>
       </li>
       <li><a href="refPages/unit1/0008completeness.html">Lesson 8: Completeness</a>
