--- a/refPages/unit1/0006funbound.html
+++ b/refPages/unit1/0006funbound.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>ACIRA Reference Page</title>
+    <title>ACIRA 0006 Function Bounds</title>
     <style>
       body {
         font-family: sans-serif;
@@ -125,9 +125,9 @@
       For every $c\in A,d\in B$ we have $h(c,d)\preceq \alpha$ and therefore 
       $\alpha$ is an upper bound on $h_{(\cdot,d)}$.  Hence $\sup_{c\in A} h_{(c,\cdot)}\preceq \alpha$.  <br>
 
-      Then $\alpha$ is an upper bound on $\sup_{c\in A} h_{(c,\cdot)}$.  Therefore $\sup_{d\in B}\sup_{c\in A}h \preceq \alpha$.
+      Then $\alpha$ is an upper bound on $\sup_{c\in A} h_{(c,\cdot)}$.  Therefore $\sup_{d\in B}\sup_{c\in A}h \preceq \alpha$. <br>
 
-      The above shows $\sup_{d\in B}\sup_{c\in A} h = \sup h$.
+      The above shows $\sup_{d\in B}\sup_{c\in A} h = \sup h$. <br>
 
       $\Box$
     </details>
