--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -45,7 +45,36 @@
     <h1>Lesson 0007: Ordered Fields</h1>
 
     <div class="def">
+      Let $(F,+,\times)$ be a field and $(F,\preceq)$ a totally ordered set.  <br>
+
+      For any $a\in F$ we define the <b>intervals</b> 
+
+      $$ \begin{aligned}
+      (a,\infty) &= \{ x\in F: a < x\} \\
+      [a,\infty) &= \{ x\in F: a\le x\} 
+      \end{aligned} $$
+
+      The interval $(a,\infty)$ is said to be <b>open on the left</b> and $[a,\infty)$ is <b>closed on the left</b>.  <br>
       
+      For $a,b\in F$, similar defintions apply for the intervals 
+
+      $$\begin{aligned}
+        (-\infty,a) \\
+        (-\infty,a] \\
+        (-\infty,\infty)\\
+        (a,b) \\
+        (a,b] \\
+        [a,b) \\
+        [a,b] 
+      \end{aligned}$$
+
+        We define $F^\ast = F\cup\{-\infty,\infty\}$.  If $a,b\in F$ then we say that $a$ is the <b>left end-point</b> of the interval $(a,b)$, and $b$ is the <b>right end-point</b>.  Likewise for other intervals. <br>
+
+        Every interval of the forms $(-\infty,\infty),(-\infty,a),(a,\infty),(a,b)$ is called an <b>open interval</b>.  <br>
+
+        Every interval of the forms $(-\infty,\infty),(-\infty,a],[a,\infty],[a,b]$ is called a <b>closed interval</b>.  <br>
+
+        
     </div>
 
     <div class="thm" id="">
