--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -74,7 +74,14 @@
 
         Every interval of the forms $(-\infty,\infty),(-\infty,a],[a,\infty],[a,b]$ is called a <b>closed interval</b>.  <br>
 
-        
+        If $X\subseteq F$ then we define the <b>subset of positives</b>, 
+        $$ X^+ = \{a\in X: 0\prec a \}$$
+        and the <b>subset of negatives</b>
+        $$ X^- = \{a\in X: a\prec 0\} $$
+        and the <b>subset of nonnegatives</b>
+        $$ X^{\preceq 0} = \{a\in X: 0\preceq a\} $$
+        and the <b>subset of nonpositives</b>
+        $$ X^{\succeq 0} = \{a\in X: a\preceq 0\}$$
     </div>
 
     <div class="thm" id="">
