--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -83,12 +83,14 @@
         and the <b>subset of nonpositives</b>
         $$ X^{\preceq 0} = \{a\in X: a\preceq 0\}$$
 
-        The set of positive numbers is $F^+$ and the negative numbers is $F^-$.
+        The set of positive numbers is $F^+$ and the negative numbers is $F^-$. <br>
 
         We say that $\preceq$ is <b>compatible with addition</b> if $\forall a,b,c\in F$ 
         $$ a\preceq b \Rightarrow a+c\preceq b+c $$
         We say that $\preceq$ is <b>compatible with multiplication</b> if $\forall a,b\in F$ and $c\in F^{\succeq 0}$,
         $$ a\preceq b \Rightarrow ac\preceq bc $$
+
+        If $\preceq$ is compatible with both addition and multiplication then we say that $(F,+,\times,\preceq)$ is an <b>ordered field</b>.  
     </div>
 
     <div class="thm" id="">
