--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -190,9 +190,9 @@
 
       <i>Proof</i>:  Let $a+p\in a+X$, and observe that since $p\preceq \alpha$ therefore $a+p\preceq a+\sup(X)$.  This demonstrates both that $UB_{a+X}\ne \emptyset$ and $a+\sup(X)\in UB_{a+X}$.  <br>
 
-      Now let $\alpha\in UB_{a+X}$ and $p\in X$.  Since $a+p\preceq a+\alpha$ then $p\preceq\alpha$ so $\alpha\in UB_X$ and then $\sup(X)\preceq \alpha$.  <br>
+      Now let $\alpha\in UB_{a+X}$ and $p\in X$.  Since $a+p\preceq \alpha$ then $p\preceq\alpha-a$ so $\alpha-a\in UB_X$ and then $\sup(X)\preceq \alpha-a$.  <br>
 
-      
+      Therefore $a+\sup(X)\preceq \alpha$ which now shows $a+\sup(X)=\sup(a+X)$.
 
       $\Box$
     </details>
