--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -192,7 +192,25 @@
 
       Now let $\alpha\in UB_{a+X}$ and $p\in X$.  Since $a+p\preceq \alpha$ then $p\preceq\alpha-a$ so $\alpha-a\in UB_X$ and then $\sup(X)\preceq \alpha-a$.  <br>
 
-      Therefore $a+\sup(X)\preceq \alpha$ which now shows $a+\sup(X)=\sup(a+X)$.
+      Therefore $a+\sup(X)\preceq \alpha$ which now shows $a+\sup(X)=\sup(a+X)$. <br>
+
+      $\Box$
+    </details>
+
+    <div class="thm">
+      Theorem: <tt>Ord. field zero prec. one</tt>
+
+      $0\prec 1$
+    </div>
+
+    <details>
+      <summary>Statement and proof.</summary>
+      <i>Statement</i>: $0\prec 1$. <br><br>
+      <i>Proof</i>: Assume for contradiction that $1\preceq 0$.  <br>
+
+      By compatbility with addition, $0\preceq -1$.  By compatibility with multiplication therefore, $0\cdot (-1)\preceq (-1)(-1)$.  <br>
+
+      This simplifies to $0\preceq 1$ which, by an earlier theorem on total orders, is inconsistent with $0\prec 1$.  <br>
 
       $\Box$
     </details>
