--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -188,13 +188,30 @@
       
       <br></br>
 
-      <i>Proof</i>:  Let $a+p\in a+X$, and observe that since $p\preceq \alpha$ therefore $a+p\preceq a+\sup(X)$.  This demonstrates both that $UB_{a+X}\ne \emptyset$ and $a+\sup(X)\in UB_{a+X}$.  <br>
+      <i>Proof</i>:  
+      
+      <details>
+        <summary>$\sup(a+X) = a+\sup(X)$</summary>
+      Let $a+p\in a+X$, and observe that since $p\preceq \alpha$ therefore $a+p\preceq a+\sup(X)$.  This demonstrates both that $UB_{a+X}\ne \emptyset$ and $a+\sup(X)\in UB_{a+X}$.  <br>
 
       Now let $\alpha\in UB_{a+X}$ and $p\in X$.  Since $a+p\preceq \alpha$ then $p\preceq\alpha-a$ so $\alpha-a\in UB_X$ and then $\sup(X)\preceq \alpha-a$.  <br>
 
       Therefore $a+\sup(X)\preceq \alpha$ which now shows $a+\sup(X)=\sup(a+X)$. <br>
 
       $\Box$
+      </details>
+
+      <details>
+        <summary>$\sup(bX) = b\sup(X).</summary>
+      </details>
+
+      <details>
+        <summary>$\sup(X+Y) = \sup(X)+\sup(Y)$.</summary>
+      </details>
+
+      <details>
+        <summary>$\sup(XY) = \sup(X)\sup(Y)$ if $X=X^{\succeq 0}, Y=Y^{\succeq 0}$.</summary>
+      </details>
     </details>
 
     <div class="thm">
