--- a/index.html
+++ b/index.html
@@ -181,7 +181,59 @@
         </ol>
       </li>
 
-      <!-- More Lessons Follow similarly... -->
+      <li> <a href="refPages/unit1/0004order.html">Lesson 4: Order</a>
+        <ol>
+          <li>Notation: $\preceq,\prec,\succeq,\succ$</li>
+          <li>Defs: Partial order, partially ordered set, poset, commensurability, totality, total order, totally ordered set</li>
+          <li>Thm: <a href="refPages/unit1/0004order.html#posetPrecStrictPartOrd">Poset prec. strict part. ord.</a></li>
+          <li>Thm: <a href="refPages/unit1/0004order.html#posetNegPrec">Poset neg. prec.</a></li>
+        </ol>
+      </li>
+
+      <li><a href="refPages/unit1/0005bounds.html">Lesson 5: Bounds</a>
+      <ol>
+        <li>Notation: $UB_A, \max(A), \sup(A)$</li>
+        <li>Defs: Upper bound, maximum, supremum, and duals (lower bound, minimum, infimum)</li>
+        <li>Thm: <a href="refPages/unit1/0005bounds.html#boundMaxIsSup">Bound max. is sup.</a></li>
+        <li>Thm: <a href="refPages/unit1/0005bounds.html#boundTotOrdFiniteSetMax">Bound tot. ord. finite set max.</a></li>
+        <li>Thm: <a href="refPages/unit1/0005bounds.html#boundInfLefteqSup">Bound inf. lefteq sup.</a> </li>
+        <li>Thm: <a href="refPages/unit1/0005bounds.html#boundSubsetSupIneq">Bound subset sup. ineq.</a> </li>
+      </ol>
+      </li>
+
+      <li><a href="refPages/unit1/0006funbound.html">Lesson 6: Function Bounds</a>
+      <ol>
+        <li>
+          Notation: $\text{Im}(f), \max(f),\sup(f),f\preceq g, f_{(\cdot, c)}, f_{(c,\cdot)}, \sup_{x\in X}f_{(x,\cdot)}, \sup_{y\in Y}f_{(\cdot,y)}, \sup_{x}\sup_y f$
+        </li>
+        <li>Defs: Image, function bound, function maximum, function supremum, partially applied function</li>
+        <li>Thm: <a href="refPages/unit1/0006funbound.html#funBoundIneqSupIneq">Fun. Bound Ineq. Sup. Ineq.</a><br>
+        </li>
+        <li>Thm: <a href="refPages/unit1/0006funbound.html#funBoundDoubleSup">Fun. Bound Double Sup.</a></li>
+      </ol>
+      </li>
+
+      <li><a href="refPages/unit1/0007ordfield.html">Lesson 7: Ordered Fields</a>
+      <ol>
+        <li>Notation: $(a,b), (a,b], [a,b), [a,b],\infty, F^\ast, a+X, aX X+Y, XY, X^+, X^-, X^{\preceq 0}, X^{\succeq 0}$</li>
+        <li>Def: Interval, bounded, closed, open, positive, negative, compatible with addition, compatible with multiplication</li>
+        <li>Thm: <tt></tt></li>
+        <li>Thm: <tt></tt> </li>
+        <li>Thm: <tt></tt></li>
+      </ol>
+      </li>
+      
+      <li><a href="refPages/unit1/0008completeness.html">Lesson 8: Completeness</a>
+      <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+      </li>
+    </ul>
+    </details>
     </ul>
   </details>
 
